# SAD-haskell-distributed-applications

./: .envrc  .gitignore  README.md  SAD-haskell-distributed-applications.cabal  flake.nix  prompt.md  shell.nix
.direnv/: flake-profile-1-link
Clases/Clase1/: PedraPaperTissores.hs  sumaFuncions.hs  sumaLLindar.hs
Clases/Clase2/: recursiu.hs
Clases/Clase3/: Llista.hs
Clases/Clase7/: Monads1.hs  Monads2.hs
Clases/Clase8/: MonadIO.hs
Clases/Clase9/: MonadIO.hs
Clases/Fitxers/: MonadEstat.hs  MonadIO.hs  Monads1.hs  Monads2.hs  PreparacioChat.hs  ThreadsMVars.hs
Experiments/: folding.hs
lab1/: 2-funcions-corregit.hs  2-funcions.hs  3-tipus.hs  inici.hs  lab1-tasques.md
lab2/: 1-tipificat-numeros.hs  2-composicio-funcions.hs  3-recursivitat.hs  lab2-tasques.md
lab3/: 1-tipus.hs  Lab3_1-corregit.hs  Lab3_1.hs  Lab3_Tests.hs  lab3-tasques.md
lab4/: Lab4-corregit.hs  Lab4.hs  Lab4_1.hs  Lab4_Tests.hs  lab4-tasques.md
lab5/: Codec_TCPSegment_Tests.hs  lab5-tasques.md
lab5/Codec/: TCPSegment-corregit.hs  TCPSegment.hs
lab6/: 06lab.hs  Lab6-corregit.hs  Lab6.hs
lab7/: Lab7-corregit.hs  Lab7.hs
lab8/: Lab8.hs
lab9/: 09lab-original.hs  Lab9.hs
