cabal-version: 3.8
name: SAD-haskell-distributed-applications
version: 0.1.0.0

library
  exposed-modules: 
      Lab3_1
      Lab4
      Codec.TCPSegment
      Lab6
      Lab7
      Lab8
      Clases.Fitxers.Monads1
      Clases.Fitxers.Monads2
      Clases.Fitxers.MonadIO
      Clases.Fitxers.MonadEstat
      Clases.Fitxers.ThreadsMVars
  hs-source-dirs: ., lab3, lab4, lab5, lab6, lab7, lab8, Clases
  build-depends: base, hashable, transformers, ansi-terminal, random, network, bytestring, containers
  default-language: GHC2021

test-suite lab3-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: lab3
  main-is: Lab3_Tests.hs
  build-depends:
      base,
      SAD-haskell-distributed-applications,
      HUnit
  other-modules:
      Lab3_1
  default-language: GHC2021

test-suite lab4-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: lab4, lab3
  main-is: Lab4_Tests.hs
  build-depends:
      base,
      SAD-haskell-distributed-applications,
      HUnit
  other-modules:
      Lab4
      Lab3_1
  default-language: GHC2021

test-suite codec-tcp-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: lab5
  main-is: Codec_TCPSegment_Tests.hs
  build-depends:
      base,
      SAD-haskell-distributed-applications,
      QuickCheck,
      smallcheck,
      HUnit
  other-modules:
      Codec.TCPSegment
  default-language: GHC2021
